--- a/api-keys.env
+++ b/api-keys.env
@@ -1,1 +1,3 @@
-
+GEMINI_API_KEY="AIzaSyCVW_hUZg73_SwizqZ6_eQTBn492J2k6fI"
+WEATHER_API="148d485bcbb34ea18a695232251204"
+GEMINI_API_KEY_FOR_FINE_TUNED_MODEL=""
